# hotels

./: .flake8  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml
hotels_service/: asgi.py  settings.py  urls.py  wsgi.py
hotels_service/core/: constants.py  helpers.py  supplier.py
hotels_service/handlers/api/: hotel.py
hotels_service/handlers/rest/: hotel.py
hotels_service/serializers/: hotel.py  supplier.py
hotels_service/tests/: test_helpers.py  test_hotel.py  test_supplier.py
